empiezo la parte e flex

--- a/CSS/Midu/Midu.html
+++ b/CSS/Midu/Midu.html
@@ -59,12 +59,12 @@
     <!-- Pruebas con las capas, ver el ejemplo en prueba.html y prueba.css -->
     <section class="container5">
         <div class="container55">
-            capas
+            z-index
         </div>
     </section>
     <section class="container5">
         <div class="container55">
-            capas
+            z-index
         </div>
     </section>
 </body>
