--- a/CSS/Flex/Flex.html
+++ b/CSS/Flex/Flex.html
@@ -49,5 +49,26 @@
             <div class="item44">3</div>
         </div>
     </section>
+    <p>--------------------------------------- 5 -----------------------------------------------</p>
+    <!-- Display: flex y flex-wrap-->
+    <section class="parent5">
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+    </section>
+    <p>--------------------------------------- 6 -----------------------------------------------</p>
+    <!-- flex y sus propiedades -->
+    <section class="parent6">
+        <div class="item6">primero</div>
+        <div class="item6">2</div>
+        <div class="item6">3</div>
+    </section>
+    <p>--------------------------------------- 7 -----------------------------------------------</p>
+    <!-- justify-content: y align-items: y align-self: -->
+    <section class="parent7">
+        <div class="item7">primero</div>
+        <div class="item7">2</div>
+        <div class="item7">3</div>
+    </section>
 </body>
 </html>
